leptos-fluent-macros/tests/ui/leptos_fluent/fail/empty.stderr
error: Missing `translations` parameter
 --> tests/ui/leptos_fluent/fail/empty.rs:6:5
  |
6 | /     leptos_fluent! {
7 | |
8 | |     };
  | |______^
  |
  = note: this error originates in the macro `leptos_fluent` (in Nightly builds, run with -Z macro-backtrace for more info)
